[package]
name = "chandy-lamport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Server binary
[[bin]]
name = "server"
path = "src/server.rs"

# Client binary
[[bin]]
name = "client"
path = "src/client.rs"
